--- a/Webpages/rating.html
+++ b/Webpages/rating.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="../style.css" rel="stylesheet">
   </head>
 
@@ -42,24 +43,30 @@
     </nav>
     <div class="container-fluid text-center">
       <div class="row content">
-        <div class="col-sm-2 sidenav">
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-          <p><a href="#">Link</a></p>
-        </div>
-        <div class="col-sm-8 text-left">
-          <h1>Ratings Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          <hr>
-          <h3>Test</h3>
-          <p>Lorem ipsum...</p>
-        </div>
-        <div class="col-sm-2 sidenav">
-          <div class="well">
-            <p>ADS</p>
+        <div class="col-sm-2">
+          <div class="well" style="margin-top:50px;">
+            <img src="../Imgs/PfpPlaceholder.png" width="30%" height="30%" style="text-align:center;"></img>
+            <p style="margin-top:10px;">Status:</p>
+            <h3>You</h3>
           </div>
-          <div class="well">
-            <p>ADS</p>
+        </div>
+        <div class="col-sm-8 text-center">
+          <h1 style="text-decoration:underline;font-weight:bold;">Rate your chat!</h1>
+          <p>Please rate your conversation.</p>
+          <span class="fa fa-star checked" style="font-size:20px; width:80px;"></span>
+          <span class="fa fa-star checked" style="font-size:20px; width:80px;"></span>
+          <span class="fa fa-star checked" style="font-size:20px; width:80px;"></span>
+          <span class="fa fa-star" style="font-size:20px; width:80px;"></span>
+          <span class="fa fa-star" style="font-size:20px; width:80px;"></span>
+          <p></p>
+          <button>Rate now!</button>
+          <p>Skip user rating.</p>
+        </div>
+        <div class="col-sm-2">
+          <div class="well" style="margin-top:50px;">
+            <img src="../Imgs/PfpPlaceholder.png" width="30%" height="30%"></img>
+            <p style="margin-top:10px;">Status:</p>
+            <h3>Other User</h3>
           </div>
         </div>
       </div>
