--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -10,7 +10,7 @@
     <link href="../style.css" rel="stylesheet">
   </head>
 
-  <body>
+  <body id="settings">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -64,6 +64,105 @@
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class ="leftbox">
+        <nav>
+            <a onclick="tabs(0)" class="tabs" active>
+              <i class ="fa fa-user"><i>
+            </a>
+            <a onclick="tabs(1)" class="tabs">
+              <i class ="fa fa-credit-card"><i>
+            </a>
+            <a onclick="tabs(2)" class="tabs">
+              <i class ="fa fa-tv"><i>
+            </a>
+            <a onclick="tabs(3)" class="tabs">
+              <i class ="fa fa-tasks"><i>
+            </a>
+            <a onclick="tabs(4)" class="tabs">
+              <i class ="fa fa-cog"><i>
+            </a>
+        </nav>
+      </div>
+      <div class ="rightbox">
+        <div class="profile tabShow">
+          <h1>Personal Information</h1>
+          <h2>Full Name</h2>
+          <input type="text" class="input" value="Jane Doe">
+          <h2>Birthday</h2>
+          <input type="text" class="input" value="April 20, 1992">
+          <h2>Gender</h2>
+          <input type="text" class="input" value="Female">
+          <h2>Email</h2>
+          <input type="text" class="input" value="example@example.com">
+          <h2>Password</h2>
+          <input type="password" class="input" value="brightcode">
+          <button class"btn">Update</button>
+        </div>
+        <div class="payment tabShow">
+          <h1>Payment Information</h1>
+          <h2>Payment Method</h2>
+          <input type="text" class="input" value="Master Card - 0202 **** **** 7336">
+          <h2>Billing</h2>
+          <input type="text" class="input" value="1234 some streey in a town">
+          <h2>ZipCode</h2>
+          <input type="text" class="input" value="419911">
+          <h2>Billing Date</h2>
+          <input type="text" class="input" value="Jan 20, 2017">
+          <h2>Redeem  Card</h2>
+          <input type="password" class="input" value="Enter Gift Card Code">
+          <button class"btn">Update</button>
+        </div>
+        <div class="subscription tabShow">
+          <h1>Subscription Information</h1>
+          <h2>Payment Update</h2>
+          <p>May 12, 2019</p>
+          <h2>Next Charges</h2>
+          <p>€80.6 <span>includes tax</span></p>
+          <h2>Plan</h2>
+          <p>Limited Plan</p>
+          <h2>Monthly</h2>
+          <p>€107.99/month</p>
+          <button class"btn">Update</button>
+        </div>
+        <div class="privacy tabShow">
+          <h1>Privacy Settings</h1>
+          <h2>Manage Email noti.</h2>
+          <p></p>
+          <h2>Manage Privacy Settings</h2>
+          <p></p>
+          <h2>View Terms of Use</h2>
+          <p></p>
+          <h2>personalized Ad Experience</h2>
+          <p></p>
+          <h2>Protect Account</h2>
+          <p></p>
+          <button class"btn">Update</button>
+        </div>
+        <div class="settings tabShow">
+          <h1>Account Settings</h1>
+          <h2>Sync Watchlist</h2>
+          <p></p>
+          <h2>Hold Subscription</h2>
+          <p></p>
+          <h2>Cancel Subscription</h2>
+          <p></p>
+          <h2>Your Devices</h2>
+          <p></p>
+          <h2>Referrals</h2>
+          <p></p>
+          <button class"btn">Update</button>
+        </div>
+      </div>
+    </div>
+
+    <script scr="../script.js">
+    <script>
+
+    </script>
+
+    </script>    >
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
     </footer>
