--- a/Webpages/settings.html
+++ b/Webpages/settings.html
@@ -18,7 +18,7 @@
       <meta name="description" content="">
       <meta name="author" content="">
 
-      <title>Business Frontpage - Start Bootstrap Template</title>
+      <title>Home Page</title>
 
       <!-- Bootstrap core CSS -->
       <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -62,23 +62,15 @@
       </nav>
       <!-- Header -->
       <header class="bg-primary py-5 mb-5">
-        <div class="container h-100">
-          <div class="row h-100 align-items-center">
-            <div class="col-lg-12">
-              <h1 class="display-4 text-white mt-5 mb-2">Welcome to Covid Connect</h1>
-            </div>
-          </div>
-        </div>
+//Add a banner
       </header>
 
       <!-- Page Content -->
       <div class="container">
         <div class="row">
           <div class="col-md-8 mb-5">
-            <h2>What is Covid Connect?</h2>
             <hr>
             <p>Covid Connnect is on online web application that allows you to contact other people who are in quarintine!</p>
-            <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
           </div>
           <div class="col-md-4 mb-5">
             <h2>Contact Us</h2>
