--- a/Webpages/Profile.HTML
+++ b/Webpages/Profile.HTML
@@ -62,8 +62,13 @@
             <p>ADS</p>
           </div>
         </div>
+        </div>
+       </div>
+       <div class="container">
+        <h1>profile</h1>
+
       </div>
-    </div>
+
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
     </footer>
