--- a/Webpages/chatroulette.html
+++ b/Webpages/chatroulette.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-sm-8 text-left">
           <h1>Chat Roulette Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur</p>
           <hr>
           <h3>Test</h3>
           <p>Lorem ipsum...</p>
