--- a/Webpages/home.html
+++ b/Webpages/home.html
@@ -36,13 +36,7 @@
     </nav>
     <!-- Header -->
     <header class="bg-primary py-5 mb-5">
-      <div class="container h-100">
-        <div class="row h-100 align-items-center">
-          <div class="col-lg-12">
-            <h1 class="display-4 text-white mt-5 mb-2">Welcome to Covid Connect</h1>
-          </div>
-        </div>
-      </div>
+      <img id="homepagebanner" src="../bg.jpg" alt="Background">
     </header>
     <!-- Page Content -->
     <div class="container">
@@ -81,7 +75,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="individualchat.html" class="btn btn-primary">Start Now!</a>
             </div>
           </div>
         </div>
@@ -93,7 +87,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="chatroulette.html" class="btn btn-primary">Start Now!</a>
             </div>
           </div>
         </div>
@@ -105,7 +99,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="connections.html" class="btn btn-primary">Start Now!</a>
             </div>
           </div>
         </div>
