--- a/Webpages/supportpage.html
+++ b/Webpages/supportpage.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="../style.css" rel="stylesheet">
+
   </head>
 
   <body>
@@ -39,12 +41,11 @@
           <p><a href="#">Link</a></p>
           <p><a href="#">Link</a></p>
         </div>
-        <div class="col-sm-8 text-left">
+        <div class="col-sm-8 text-center">
           <h1>Support Page</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           <hr>
-          <h3>Test</h3>
-          <p>Lorem ipsum...</p>
+          <h2 class="clickable">We're Here to Help!</h2>
+          <h2 class="hidden">"Browse Our Help Topics!!"</h2>
         </div>
         <div class="col-sm-2 sidenav">
           <div class="well">
@@ -58,6 +59,13 @@
     </div>
     <footer class="container-fluid text-center">
       <p>Covid Connect Footer</p>
+
     </footer>
-  </body>
+<script>
+  $( "h2" ).click(function() {
+    $( ".hidden" ).slideToggle();
+  });
+</script>
+</body>
+
 </html>
