--- a/Webpages/Connections.html
+++ b/Webpages/Connections.html
@@ -33,72 +33,84 @@
       </div>
     </div>
   </nav>
+  
   <div class="container-fluid text-center">
-    <div class="row content">
       <div class="row content">
         <div class="col-sm-12">
           <h1 style="text-decoration:underline; font-weight:bold;">Connections</h1>
-        </div>
-        <div class="col-sm-3 text-center">
-          <hr>
-          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
-          <h4>Name</h4>
-          
-          <div class="chat-popup" id="myForm">
-          <form action="/action_page.php" class="form-container">
-          <button style="">Chat Now!</button>
-          <label for="msg"><b>Message</b></label>
-          <textarea placeholder="Type message.." name="msg" required></textarea>
-          <button type="submit" class="btn">Send</button>
-          <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-         </form>
-        </div>
-        </div>
-        <div class="col-sm-3 text-center">
-          <hr>
-          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
-          <h4>Name</h4>
-          <button style="">Chat Now!</button>
-        </div>
-        <div class="col-sm-3 text-center">
-          <hr>
-          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
-          <h4>Name</h4>
-          <button style="">Chat Now!</button>
-        </div>
-        <div class="col-sm-3 text-center">
-          <hr>
-          <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
-          <h4>Name</h4>
-          <button style="">Chat Now!</button>
         </div>
       </div>
       <div class="row content">
         <div class="col-sm-12">
           <div class="col-sm-3 text-center">
+            <div id="ConColour">
             <hr>
             <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
             <h4>Name</h4>
             <button style="">Chat Now!</button>
+          </div>
           </div>
           <div class="col-sm-3 text-center">
+            <div id="ConColour">
             <hr>
             <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
             <h4>Name</h4>
             <button style="">Chat Now!</button>
+          </div>
           </div>
           <div class="col-sm-3 text-center">
+            <div id="ConColour">
             <hr>
             <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
             <h4>Name</h4>
             <button style="">Chat Now!</button>
+          </div>
           </div>
           <div class="col-sm-3 text-center">
+            <div id="ConColour">
             <hr>
             <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
             <h4>Name</h4>
             <button style="">Chat Now!</button>
           </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row content">
+        <div class="col-sm-12">
+          <div class="col-sm-3 text-center">
+            <div id="ConColour">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+          </div>
+          <div class="col-sm-3 text-center">
+            <div id="ConColour">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+          </div>
+          <div class="col-sm-3 text-center">
+            <div id="ConColour">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+        </div>
+          <div class="col-sm-3 text-center">
+            <div id="ConColour">
+            <hr>
+            <img src="../Imgs/PfpPlaceholder.png" width="60%" height="60%"></img>
+            <h4>Name</h4>
+            <button style="">Chat Now!</button>
+          </div>
+        </div>
         </div>
       </div>
     </div>
