--- a/Webpages/chat.html
+++ b/Webpages/chat.html
@@ -1,3 +1,5 @@
+import Talk from "talkjs";
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,30 +13,11 @@
   <script src="../script.js"></script>
   <!-- minified snippet to load TalkJS without delaying your page -->
   <script>
-    (function(t, a, l, k, j, s) {
-      s = a.createElement('script');
-      s.async = 1;
-      s.src = "https://cdn.talkjs.com/talk.js";
-      a.head.appendChild(s);
-      k = t.Promise;
-      t.Talk = {
-        v: 3,
-        ready: {
-          then: function(f) {
-            if (k) return new k(function(r, e) {
-              l.push([f, r, e])
-            });
-            l
-              .push([f])
-          },
-          catch: function() {
-            return k && new k()
-          },
-          c: l
-        }
-      };
-    })(window, document, []);
-  </script>
+(function(t,a,l,k,j,s){
+s=a.createElement('script');s.async=1;s.src="https://cdn.talkjs.com/talk.js";a.head.appendChild(s)
+;k=t.Promise;t.Talk={v:3,ready:{then:function(f){if(k)return new k(function(r,e){l.push([f,r,e])});l
+.push([f])},catch:function(){return k&&new k()},c:l}};})(window,document,[]);
+</script>
 </head>
 
 <body>
@@ -62,34 +45,32 @@
   <div id="talkjs-container" style="width: 90%; margin: 30px; height: 500px">
     <i>Loading chat...</i>
     <script>
-      await Talk.ready;
-      const me = new Talk.User({
-        id: "123456",
-        name: "Alice",
-        email: "alice@example.com",
-        photoUrl: "https://demo.talkjs.com/img/alice.jpg",
-        welcomeMessage: "Hey there! How are you? :-)"
-      });
-      const session = new Talk.Session({
-        appId: "t5aSe1De",
-        me: me
-      });
-      const other = new Talk.User({
-        id: "654321",
-        name: "Sebastian",
-        email: "Sebastian@example.com",
-        photoUrl: "https://demo.talkjs.com/img/sebastian.jpg",
-        welcomeMessage: "Hey, how can I help?"
-      });
+    await Talk.ready;
+  const me = new Talk.User({
+      id: "123456",
+      name: "Alice",
+      email: "alice@example.com",
+      photoUrl: "https://demo.talkjs.com/img/alice.jpg",
+      welcomeMessage: "Hey there! How are you? :-)"
+  });
+  const session = new Talk.Session({
+      appId: "MYLEip5b",
+      me: me
+  });
+  const other = new Talk.User({
+      id: "654321",
+      name: "Sebastian",
+      email: "Sebastian@example.com",
+      photoUrl: "https://demo.talkjs.com/img/sebastian.jpg",
+      welcomeMessage: "Hey, how can I help?"
+  });
 
-      const conversation = session.getOrCreateConversation(Talk.oneOnOneId(me, other));
-      conversation.setParticipant(me);
-      conversation.setParticipant(other);
+  const conversation = session.getOrCreateConversation(Talk.oneOnOneId(me, other));
+  conversation.setParticipant(me);
+  conversation.setParticipant(other);
 
-      const inbox = session.createInbox({
-        selected: conversation
-      });
-      inbox.mount(document.getElementById("talkjs-container"));
+  const inbox = session.createInbox({selected: conversation});
+  inbox.mount(document.getElementById("talkjs-container"));
     </script>
   </div>
 </body>
